# Math_Game

./: .gitignore  CMakeLists.txt  README.md
Test/: CMakeLists.txt  MockImageInfo.h  MockRandomGenerator.h  MockUrlReader.h  imageInfoTests.cpp  main.cpp
app/: CMakeLists.txt  Game  qml.qrc
app/include/: imageInfo.h  paths.h  question.h  randomgenerator.h  urlreader.h
app/qml/: Cell.qml  Filter.qml  Options.qml  main.qml
app/resources/: AnswerBox.qml  Counter.qml  Game.qml  QuestionText.qml
app/resources/images/: howToConvert.txt
app/src/: imageInfo.cpp  main.cpp  question.cpp  randomgenerator.cpp  urlreader.cpp
